--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
 <body>
   <div id="app"></div>
   <script src="../src/index.js"></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
 </body>
 </html>
